force-app/main/default/objects/A_Z_Review__c/A_Z_Review__c.object-meta.xml
<CustomObject>
    <description>This is used to store A-Z Reviews</description>
    <label>A-Z Review</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A-Z Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>