force-app/main/default/objects/A_Z_Review__c/fields/A2Z_Review_Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>A2Z_Review_Interaction_Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>A-Z Review Interaction Type</description>
    <label>A-Z Review Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COI Proactive</fullName>
            </value>
            <value>
                <fullName>COI Reactive</fullName>
            </value>
            <value>
                <fullName>COI Relationship building</fullName>
            </value>
            <value>
                <fullName>Existing Proactive</fullName>
            </value>
            <value>
                <fullName>Existing Reactive</fullName>
            </value>
            <value>
                <fullName>Existing Relationship Building</fullName>
            </value>
            <value>
                <fullName>New Proactive</fullName>
            </value>
            <value>
                <fullName>New Reactive</fullName>
            </value>
            <value>
                <fullName>New Relationship Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>