force-app/main/default/objects/A_Z_Review__c/fields/Banker_LAN_ID__c.field-meta.xml
<CustomField>
    <fullName>Banker_LAN_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Formula Field
Owner.Lan_Id__c</description>
    <formula>Owner:User.Lan_Id__c</formula>
    <label>Banker LAN ID</label>
    <type>Text</type>
</CustomField>