force-app/main/default/objects/A_Z_Review__c/fields/Banker_Salary_ID__c.field-meta.xml
<CustomField>
    <fullName>Banker_Salary_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Formula Field
Owner.Employee_Id__c</description>
    <formula>Owner:User.EmployeeNumber</formula>
    <label>Banker Salary ID</label>
    <type>Text</type>
</CustomField>