force-app/main/default/objects/A_Z_Review__c/fields/Borrowing_OFI_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Borrowing_OFI_Relationship__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Customer&apos;s lending or relationship with OFI&apos;s.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Borrowing/(OFI Relationship)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>