force-app/main/default/objects/A_Z_Review__c/fields/Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Name of the person the banker spoke with</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the name of the customer you spoke with during the A-Z Review.</inlineHelpText>
    <label>Business Contact</label>
    <length>40</length>
    <type>Text</type>
</CustomField>