force-app/main/default/objects/A_Z_Review__c/fields/Business_Details__c.field-meta.xml
<CustomField>
    <fullName>Business_Details__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non-Sensitive Personal Information;Source - Salesforce</complianceGroup>
    <description>Describe customer&apos;s business.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>How does the business work and what challenges do they face?  i.e  works / owner goals / their business background / Future plans / Customers / Staff / Suppliers / Challenges / Competition / Industry</inlineHelpText>
    <label>Business Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>