force-app/main/default/objects/A_Z_Review__c/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Customer Record with filter of individual record type</description>
    <label>Business Owner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected customer must be an Individual.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PersonAccount</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>A-Z Reviews (Contact)</relationshipLabel>
    <relationshipName>A_Z_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>