force-app/main/default/objects/A_Z_Review__c/fields/Business_Owner_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Formula field containing Source System Id of business owner</description>
    <formula>Business_Owner__r.Source_System_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Owner Number</label>
    <type>Text</type>
</CustomField>