force-app/main/default/objects/A_Z_Review__c/fields/CLG_Number__c.field-meta.xml
<CustomField>
    <fullName>CLG_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Formula Field : CLGCustomer__r.CLG__c</description>
    <formula>CLGCustomer__r.CLG__c</formula>
    <label>CLG Number</label>
    <type>Text</type>
</CustomField>