force-app/main/default/objects/A_Z_Review__c/fields/CLGCustomer__c.field-meta.xml
<CustomField>
    <fullName>CLGCustomer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Display CLG related to the Customer with filter of CLG record type</description>
    <label>CLG Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CLG</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>A-Z Reviews (CLG Customer)</relationshipLabel>
    <relationshipName>A_Z_Reviews2</relationshipName>
    <type>Lookup</type>
</CustomField>