force-app/main/default/objects/A_Z_Review__c/fields/COI_Member__c.field-meta.xml
<CustomField>
    <fullName>COI_Member__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for COI member</description>
    <label>COI Member</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Circle_Of_Influence__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Company_Member</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Circle_Of_Influence__c</referenceTo>
    <relationshipLabel>A-Z Reviews</relationshipLabel>
    <relationshipName>A_Z_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>