force-app/main/default/objects/A_Z_Review__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Auto set when the status is changed to Completed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>