force-app/main/default/objects/A_Z_Review__c/fields/CPID__c.field-meta.xml
<CustomField>
    <fullName>CPID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Formula Field
Customer.CPID__c</description>
    <formula>Customer__r.CPID__c</formula>
    <label>CPID</label>
    <type>Text</type>
</CustomField>