force-app/main/default/objects/A_Z_Review__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non-Sensitive Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Customer Record.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>A-Z Reviews</relationshipLabel>
    <relationshipName>A_Z_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>