force-app/main/default/objects/A_Z_Review__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Formula Field
Customer.Source_System_ID__c</description>
    <formula>Customer__r.Source_System_ID__c</formula>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>