force-app/main/default/objects/A_Z_Review__c/fields/Existing_Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Existing_Business_Owner__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Existing business owner</description>
    <label>Existing Business Owner?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>