force-app/main/default/objects/A_Z_Review__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non-Sensitive Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Lead Record.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>A-Z Reviews</relationshipLabel>
    <relationshipName>A_Z_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>