force-app/main/default/objects/A_Z_Review__c/fields/My_Team_A2Z_Review__c.field-meta.xml
<CustomField>
    <fullName>My_Team_A2Z_Review__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Salesforce</complianceGroup>
    <description>My reportees data</description>
    <formula>Owner:User.ManagerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Team A2Z Review</label>
    <type>Checkbox</type>
</CustomField>