force-app/main/default/objects/A_Z_Review__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non-Sensitive Personal Information;Source - Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Opportunity Record.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>A-Z Reviews</relationshipLabel>
    <relationshipName>A_Z_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>