force-app/main/default/objects/A_Z_Review__c/fields/Personal_Banking__c.field-meta.xml
<CustomField>
    <fullName>Personal_Banking__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non-Sensitive Personal Information;Source - Salesforce</complianceGroup>
    <description>Customer&apos;s personal banking needs.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>List the customer Business and Transaction banking needs including relationships with OFI.</inlineHelpText>
    <label>Personal Banking</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>