force-app/main/default/objects/A_Z_Review__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The date that the Banker had the A-Z Review conversation with the Customer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>