force-app/main/default/objects/A_Z_Review__c/fields/Segment_Type__c.field-meta.xml
<CustomField>
    <fullName>Segment_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>&quot;Commercial&quot;</defaultValue>
    <description>Set to &apos;Commercial&apos; by default in the backend. Defaulted.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Segment Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>