force-app/main/default/objects/A_Z_Review__c/fields/Source_System_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Identifier__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>&quot;CCRM&quot;</defaultValue>
    <description>Set to &apos;CCRM&apos; by default in the backend. Default Value on field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source System Identifier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>