force-app/main/default/objects/A_Z_Review__c/fields/Transaction_Banking__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Banking__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non-Sensitive Personal Information;Source - Salesforce</complianceGroup>
    <description>Customer&apos;s transaction banking needs.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Does customer have any personal banking needs e,g:  Home loan / Credit card / Vehicle finance / Financial planning / Personal loans / Everyday banking</inlineHelpText>
    <label>Transaction Banking</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>