force-app/main/default/objects/A_Z_Review__c/recordTypes/Commercial_A_Z_Review.recordType-meta.xml
<RecordType>
    <fullName>Commercial_A_Z_Review</fullName>
    <active>true</active>
    <description>RecordType for commercial</description>
    <label>Commercial A-Z Review</label>
</RecordType>