force-app/main/default/objects/A_Z_Review__c/validationRules/CCRM_A_Z_Review_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_A_Z_Review_Lock</fullName>
    <active>true</active>
    <description>It will not allow to edit A-Z Review after 14 days onwards.</description>
    <errorConditionFormula>AND(
				 $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
    $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
				NOT(ISNEW()),
			 RecordType.DeveloperName = &apos;Commercial_A_Z_Review&apos;,
				OR(
								ISCHANGED(Borrowing_OFI_Relationship__c),
								ISCHANGED(Business_Details__c),
								ISCHANGED(Customer__c),
								ISCHANGED(Lead__c),
								ISCHANGED(Opportunity__c),
								ISCHANGED(Personal_Banking__c),
								ISCHANGED(Status__c),
							 ISCHANGED(OwnerId),
								ISCHANGED(Name),
								ISCHANGED(Transaction_Banking__c)
				),
				Completed_Date__c + 14 &lt;= TODAY()
)</errorConditionFormula>
    <errorMessage>Record cannot be edited after 14 days from Completion date.</errorMessage>
</ValidationRule>