force-app/main/default/objects/A_Z_Review__c/validationRules/CCRM_Owner_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_Owner_Change</fullName>
    <active>true</active>
    <description>Only owner of A-Z review can transfer the ownership</description>
    <errorConditionFormula>AND(
				$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
				$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
    NOT(ISNEW()),
    RecordType.DeveloperName = &apos;Commercial_A_Z_Review&apos;,
    ISCHANGED(OwnerId),
    PRIORVALUE(OwnerId) != $User.Id
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Only owner of A-Z Review can transfer the ownership</errorMessage>
</ValidationRule>